commit 1
--------
Added web pages to repository

commit 2
--------
Added a shop button to the navigation bar
Fixed h1 font size for mobile devices
Fixed the title on the tab to match the project

commit 3
--------
Fixed logo size for landscape on mobile devices
Added changelog to the repository
Added a template for a video background for a future landing page
Create a script that ensures the main page will take up 100% of the screen
Added a div with an image background
Removed margin from the navigation bar

commit 4
--------
Appended forgotten change to changelog

commit 5
--------
Vertically aligned content in main-block div
Added an image to main-block div
Added text to main-block div
Added a button linking to the store to main-block div

commit 6
--------
Fixed mobile responsiveness for smaller screens
Removed main-block image from landscape mobile viewports

commit 7
--------
Added animations to the main-block content
Added in-between sections to page
Added new sections with background images
Made page parallax

commit 8
--------
Fixed a bug causing the product description to hide until scroll

commit 9
--------
Potential fix for mobile background image bug

commit 10
---------
Added logo to landing page
Changed video.css to landing.css and removed its stylesheet reference in landing.html
Added buttons linking to landing pages

commit 11
---------
Applied z-index to buttons on landing page
Changed cursor and color of landing page buttons on hover

commit 12
---------
Changed the tagline on index.html
Changed url of shop button on index.html

commit 13
---------
Updated landing page mission statement and tagline
Changed landing page button to "Learn More"
Added section below to link to residential and commercial pages
Changed tagline on residential page