@@ -14,7 +14,7 @@
     border-radius: 12px;
     font-size: 2em;
     z-index: 2;
-    margin: 25px auto;
+    margin: 0 45px;
 }
 
 .button:hover {
@@ -22,6 +22,10 @@
     color: #f2f2f2;
     cursor: pointer;
     border: solid #f2f2f2;
+}
+
+.buttons {
+    margin: 45px auto;
 }
 
 .fullscreen-video-wrap {
@@ -67,10 +71,6 @@
     text-align: center;
 }
 
-.mission-statement {
-    margin: 15px auto 30px auto;
-}
-
 .service {
     position: relative;
     border-radius: 12px;
@@ -98,7 +98,6 @@
 }
 
 .tagline {
-    text-decoration: underline;
     margin-bottom: 15px;
 }
 
@@ -126,24 +125,31 @@
 
 /* Small */
 @media only screen and (max-width: 768px) {
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .button {
+        margin: 25px auto;
+    }
+    
     .logo img {
         width: 100%;
     }
 
-    .mission-statement {
+    .tagline {
         display: none;
     }
 
     .services {
         height: 200vh;
+        background-attachment: scroll;
     }
 
     .service {
         margin: 10vh auto;
-    }
-
-    .tagline {
-        text-decoration: none;
     }
 }
 
@@ -154,16 +160,24 @@
 
 /* Mobile Landscape */
 @media only screen and (max-width: 768px) and (max-height: 500px) {
-    .logo img {
-        width: 50%;
+    .buttons {
+        display: inline-block;
     }
 
-    .mission-statement {
-        display: none;
+    .button {
+        margin: 20px;
+    }
+    
+    .logo img {
+        width: 50%;
     }
 
     .sub {
         margin: 0 auto;
         padding: 0;
+    }
+
+    .services {
+        background-attachment: scroll;
     }
 }
