@@ -34,12 +34,13 @@
             </div>
             <div class="row">
                 <div class="sub col-md-9 col-12">
-                    <h2 class="tagline">Wherever Life Takes You — Stay Connected</h2>
-                    <h3 class="mission-statement">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit nulla quisquam nesciunt quae voluptates error expedita eveniet, eum harum soluta.</h3>
-                </div>
+                    <h2 class="tagline">Wherever Life Takes You — Stay Connected</h2>                </div>
             </div>
             <div class="row">
-                <a href="" class="button">Learn More</a>
+                <div class="buttons">
+                    <a href="" class="button col-md-3 col-9">Learn More</a>
+                    <a href="http://shop.ekhocomm.com/" class="button col-md-3 col-9">Shop Now</a>
+                </div>
             </div>
         </div>
     </header>
